--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <button id="division" class="btn">/</button>
                     <button id="prevAnswer" class="btn" style=" padding-left:9px" >AN</button>
 
-                    <button id="0" class="btn" style=" width:78px" >0</button>
+                    <button id="0" class="btn" style=" width:32.5%" >0</button>
                     <button id="equals" class="btn">=</button>
                     <button id="multi" class="btn">*</button>
                     <button id="delete" class="btn" style=" padding-left:9px">DE</button>  
