--- a/index.html
+++ b/index.html
@@ -22,38 +22,38 @@
                 <div class="table-responsive">    
                 <table class="table table-sm ">
                         <tr >
-                            <td class="border-0"><button id="7" class="btn btn-block">7</button></td>
-                            <td class="border-0"><button id="8" class="btn btn-block">8</button></td>
-                            <td class="border-0"><button id="9" class="btn btn-block">9</button></td>
-                            <td class="border-0"><button id="plus" class="btn btn-block">+</button></td>
+                            <td class="border-0 simple"><button id="7" class="btn btn-block">7</button></td>
+                            <td class="border-0 simple"><button id="8" class="btn btn-block">8</button></td>
+                            <td class="border-0 simple"><button id="9" class="btn btn-block">9</button></td>
+                            <td class="border-0 simple"><button id="plus" class="btn btn-block">+</button></td>
                             <td class="border-0"><button id="clear" class="btn btn-block" >C</button></td>
                         </tr>
                         <tr>
-                            <td class="border-0"><button id="4" class="btn btn-block">4</button></td>
-                            <td class="border-0"><button id="5" class="btn btn-block">5</button></td>
-                            <td class="border-0"><button id="6" class="btn btn-block">6</button></td>
-                            <td class="border-0"><button id="minus" class="btn btn-block">-</button></td>
+                            <td class="border-0 simple"><button id="4" class="btn btn-block">4</button></td>
+                            <td class="border-0 simple"><button id="5" class="btn btn-block">5</button></td>
+                            <td class="border-0 simple"><button id="6" class="btn btn-block">6</button></td>
+                            <td class="border-0 simple"><button id="minus" class="btn btn-block">-</button></td>
                             <td class="border-0"><button id="clearPrev" class="btn btn-block">CP</button></td>
                        </tr>    
                         <tr>
-                            <td class="border-0"> <button id="1" class="btn btn-block">1</button></td>
-                            <td class="border-0"> <button id="2" class="btn btn-block">2</button></td>
-                            <td class="border-0"> <button id="3" class="btn btn-block">3</button></td>
-                            <td class="border-0"> <button id="division" class="btn btn-block">/</button></td>
+                            <td class="border-0 simple"><button id="1" class="btn btn-block">1</button></td>
+                            <td class="border-0 simple"><button id="2" class="btn btn-block">2</button></td>
+                            <td class="border-0 simple"><button id="3" class="btn btn-block">3</button></td>
+                            <td class="border-0 simple"><button id="division" class="btn btn-block">/</button></td>
                             <td class="border-0"> <button id="prevAnswer" class="btn btn-block"  >AN</button></td>
                         </tr>        
                         <tr>
-                            <td class="border-0" colspan="2" > <button id="0" class="btn btn-block btn-block" >0</button></td>
-                            <td class="border-0"> <button id="equals" class="btn btn-block">=</button></td>
-                            <td class="border-0"> <button id="multi" class="btn btn-block">*</button></td>
+                            <td class="border-0 simple" colspan="2" > <button id="0" class="btn btn-block btn-block" >0</button></td>
+                            <td class="border-0 simple"><button id="equals" class="btn btn-block">=</button></td>
+                            <td class="border-0 simple"><button id="multi" class="btn btn-block">*</button></td>
                             <td class="border-0"> <button id="delete" class="btn btn-block" >DE</button> </td> 
                         </tr>         
                         <tr>
-                            <td class="border-0"><button id="leftP" class="btn btn-block">(</button></td>
-                            <td class="border-0"><button id="deci" class="btn btn-block">.</button></td>
-                            <td class="border-0"><button id="rightP" class="btn btn-block">)</button></td>
-                            <td class="border-0"><button id="pow" class="btn btn-block">^</button></td>
-                            <td class="border-0"><button id="root" class="btn btn-block"  >RT</button></td>
+                            <td class="border-0 simple"><button id="leftP" class="btn btn-block">(</button></td>
+                            <td class="border-0 simple"><button id="deci" class="btn btn-block">.</button></td>
+                            <td class="border-0 simple"><button id="rightP" class="btn btn-block">)</button></td>
+                            <td class="border-0 simple"><button id="pow" class="btn btn-block">^</button></td>
+                            <td class="border-0 simple"><button id="root" class="btn btn-block">RT</button></td>
                         </tr>
              </table>
               </div>
