--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </tr>        
                         <tr>
                             <td class="border-0 simple" colspan="2" > <button id="0" class="btn btn-block btn-block" >0</button></td>
-                            <td class="border-0 simple"><button id="equals" class="btn btn-block">=</button></td>
+                            <td class="border-0 "><button id="equals" class="btn btn-block">=</button></td>
                             <td class="border-0 simple"><button id="multi" class="btn btn-block">*</button></td>
                             <td class="border-0"> <button id="delete" class="btn btn-block" >DE</button> </td> 
                         </tr>         
