--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </tr>        
                         <tr>
                             <td class="border-0 simple" colspan="2" ><button id="0" class="btn btn-block btn-block" >0</button></td>
-                            <td class="border-0 "><button id="equals" class="btn btn-block">=</button></td>
+                            <td class="border-0"><button id="equals" class="btn btn-block">=</button></td>
                             <td class="border-0 simple"><button id="multi" class="btn btn-block">*</button></td>
                             <td class="border-0"> <button id="delete" class="btn btn-block" >DE</button> </td> 
                         </tr>         
@@ -53,7 +53,7 @@
                             <td class="border-0 simple"><button id="deci" class="btn btn-block">.</button></td>
                             <td class="border-0 simple"><button id="rightP" class="btn btn-block">)</button></td>
                             <td class="border-0 simple"><button id="pow" class="btn btn-block">^</button></td>
-                            <td class="border-0 simple"><button id="root" class="btn btn-block">RT</button></td>
+                            <td class="border-0"><button id="root" class="btn btn-block">RT</button></td>
                         </tr>
              </table>
               </div>
